--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddAccount.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/AddAccount.fxml
@@ -45,32 +45,62 @@
                                     <Insets left="20.0" />
                                  </padding>
                               </VBox>
-                              <VBox alignment="CENTER" prefHeight="259.0" prefWidth="398.0" spacing="30.0">
+                              <VBox prefHeight="259.0" prefWidth="398.0" spacing="30.0">
                                  <children>
                                             <TextField fx:id="identifiant" maxWidth="250.0" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Saisir l'identifiant" />
                                             <PasswordField fx:id="mdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Saisir mot de passe" />
                                             <PasswordField fx:id="confirmMdp" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Confirmation du mot de passe" />
                                  </children>
+                                 <padding>
+                                    <Insets left="30.0" top="40.0" />
+                                 </padding>
                               </VBox>
                            </children>
                         </VBox>
-                        <VBox maxHeight="200.0" prefHeight="227.0" prefWidth="350.0" styleClass="profil-container">
+                        <VBox maxHeight="450.0" spacing="20.0">
                            <children>
-                              <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                              <VBox maxHeight="200.0" prefHeight="227.0" prefWidth="350.0" styleClass="profil-container">
                                  <children>
-                                    <Label styleClass="profil-container-header-title" text="Rôle du compte" />
+                                    <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                       <children>
+                                          <Label styleClass="profil-container-header-title" text="Rôle du compte" />
+                                       </children>
+                                       <padding>
+                                          <Insets left="20.0" />
+                                       </padding>
+                                    </VBox>
+                                    <VBox prefHeight="160.0" prefWidth="348.0">
+                                       <children>
+                                                  <ComboBox fx:id="grade" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Choisissez le grade du compte" />
+                                       </children>
+                                       <padding>
+                                          <Insets left="30.0" top="40.0" />
+                                       </padding>
+                                    </VBox>
                                  </children>
-                                 <padding>
-                                    <Insets left="20.0" />
-                                 </padding>
                               </VBox>
-                              <VBox alignment="CENTER" prefHeight="160.0" prefWidth="348.0">
+                              <VBox prefHeight="220.0" prefWidth="350.0" styleClass="profil-container">
                                  <children>
-                                            <ComboBox fx:id="grade" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" promptText="Choisissez le grade du compte" />
+                                    <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                       <children>
+                                          <Label styleClass="profil-container-header-title" text="Liaison du compte" />
+                                       </children>
+                                       <padding>
+                                          <Insets left="20.0" />
+                                       </padding>
+                                    </VBox>
+                                    <VBox prefHeight="150.0" prefWidth="348.0">
+                                       <children>
+                                          <ComboBox fx:id="entityCb" maxWidth="250.0" prefHeight="40.0" prefWidth="250.0" />
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                       <padding>
+                                          <Insets left="30.0" top="40.0" />
+                                       </padding>
+                                    </VBox>
                                  </children>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
                               </VBox>
                            </children>
                         </VBox>
