--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditVehicule.fxml
@@ -3,15 +3,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <StackPane fx:id="stackPane" minHeight="800.0" minWidth="1200.0" style="-fx-background-color: white;" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mmn.circuitscourts.controller.admin.EditVehiculeController">
     <children>
         <BorderPane fx:id="container" prefHeight="700.0" prefWidth="1000.0">
@@ -21,7 +18,7 @@
             <center>
                 <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Button mnemonicParsing="false" styleClass="back-button" text="Retour" onMouseClicked="#onBackButton">
+                        <Button mnemonicParsing="false" onMouseClicked="#onBackButton" styleClass="back-button" text="Retour">
                             <graphic>
                                 <Region styleClass="back-button-img" />
                             </graphic>
@@ -32,22 +29,53 @@
                             </VBox.margin>
                         </Label>
                     </children>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <HBox alignment="CENTER" prefHeight="449.0" prefWidth="871.0">
+                  <children>
+                     <VBox maxHeight="350.0" prefHeight="407.0" prefWidth="502.0" styleClass="profil-container">
                         <children>
-                            <Label fx:id="vehicule" minHeight="40.0" minWidth="250.0" prefWidth="150.0"/>
-                            <TextField fx:id="poids" minHeight="40.0" minWidth="250.0" promptText="Horaire de livraison">
-                                <HBox.margin>
-                                    <Insets left="200.0" />
-                                </HBox.margin>
-                            </TextField>
+                           <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                              <children>
+                                 <Label styleClass="profil-container-header-title" text="Détails du véhicule" />
+                              </children>
+                              <padding>
+                                 <Insets left="20.0" />
+                              </padding>
+                           </VBox>
+                           <VBox prefHeight="289.0" prefWidth="500.0" spacing="20.0">
+                              <children>
+                                 <HBox maxWidth="438.0" prefHeight="38.0" prefWidth="438.0">
+                                    <children>
+                                       <VBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="240.0">
+                                          <children>
+                                             <Label text="Plaque d'immatriculation" />
+                                          </children>
+                                          <padding>
+                                             <Insets left="10.0" />
+                                          </padding>
+                                       </VBox>
+                                       <VBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="198.0">
+                                          <children>
+                                                    <Label fx:id="vehicule" />
+                                          </children>
+                                       </VBox>
+                                    </children>
+                                 </HBox>
+                                        <TextField fx:id="poids" maxWidth="250.0" minHeight="40.0" minWidth="250.0" promptText="Poids maximum supporté" />
+                              </children>
+                              <VBox.margin>
+                                 <Insets />
+                              </VBox.margin>
+                              <padding>
+                                 <Insets left="30.0" top="60.0" />
+                              </padding>
+                           </VBox>
                         </children>
-                        <VBox.margin>
-                            <Insets top="25.0" />
-                        </VBox.margin>
-                    </HBox>
+                     </VBox>
+                  </children>
+               </HBox>
                     <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                         <children>
-                            <Button id="vehiculeButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" text="Modifier le véhicule" onMouseClicked="#onEditButton" styleClass="addCommandeButton"/>
+                            <Button id="vehiculeButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier le véhicule" />
                         </children>
                     </HBox>
                     <padding>
