--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Entreprise.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Entreprise.fxml
@@ -22,53 +22,47 @@
                     <children>
                         <HBox prefHeight="120.0" prefWidth="871.0">
                             <VBox.margin>
-                                <Insets bottom="20.0"/>
+                                <Insets bottom="20.0" />
                             </VBox.margin>
                             <children>
-                                <Label prefHeight="35.0" prefWidth="142.0" styleClass="main-title" text="Commandes">
+                                <Label prefHeight="35.0" prefWidth="142.0" styleClass="main-title" text="Entreprises">
                                     <HBox.margin>
-                                        <Insets top="30.0"/>
+                                        <Insets top="30.0" />
                                     </HBox.margin>
                                 </Label>
-                                <VBox maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0"
-                                      fx:id="successPopup" styleClass="successPopup" visible="false">
+                                <VBox fx:id="successPopup" maxHeight="114.0" minWidth="400.0" prefHeight="114.0" prefWidth="400.0" styleClass="successPopup" visible="false">
                                     <HBox.margin>
-                                        <Insets left="325.0"/>
+                                        <Insets left="325.0" />
                                     </HBox.margin>
                                     <children>
-                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0"
-                                              styleClass="successPopup-indicator"/>
+                                        <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0" styleClass="successPopup-indicator" />
                                         <HBox prefHeight="120.0" prefWidth="340.0" styleClass="successPopup-container">
                                             <children>
                                                 <Label prefHeight="17.0" prefWidth="33.0">
                                                     <padding>
-                                                        <Insets left="10.0" top="17.0"/>
+                                                        <Insets left="10.0" top="17.0" />
                                                     </padding>
                                                     <graphic>
-                                                        <Region styleClass="successPopup-img"/>
+                                                        <Region styleClass="successPopup-img" />
                                                     </graphic>
                                                 </Label>
                                                 <VBox prefHeight="110.0" prefWidth="312.0">
                                                     <children>
-                                                        <Label styleClass="successPopup-title"
-                                                               text="Commande ajoutée !"/>
-                                                        <Label styleClass="successPopup-subtitle"
-                                                               text="La commande n°X a bien été ajoutée !"/>
+                                                        <Label styleClass="successPopup-title" text="Commande ajoutée !" />
+                                                        <Label styleClass="successPopup-subtitle" text="La commande n°X a bien été ajoutée !" />
                                                     </children>
                                                     <padding>
-                                                        <Insets left="15.0" top="15.0"/>
+                                                        <Insets left="15.0" top="15.0" />
                                                     </padding>
                                                 </VBox>
                                                 <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
                                                     <children>
-                                                        <Button mnemonicParsing="false" prefHeight="28.0"
-                                                                prefWidth="28.0" styleClass="successPopup-close"
-                                                                onMouseClicked="#onClosePopup">
+                                                        <Button mnemonicParsing="false" onMouseClicked="#onClosePopup" prefHeight="28.0" prefWidth="28.0" styleClass="successPopup-close">
                                                             <graphic>
-                                                                <Region styleClass="successPopup-close-img"/>
+                                                                <Region styleClass="successPopup-close-img" />
                                                             </graphic>
                                                             <VBox.margin>
-                                                                <Insets right="15.0" top="20.0"/>
+                                                                <Insets right="15.0" top="20.0" />
                                                             </VBox.margin>
                                                         </Button>
                                                     </children>
