--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditVehicule.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/EditVehicule.fxml
@@ -2,10 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -23,61 +26,129 @@
                                 <Region styleClass="back-button-img" />
                             </graphic>
                         </Button>
-                        <Label fx:id="title" styleClass="main-title">
-                            <VBox.margin>
-                                <Insets top="20.0" />
-                            </VBox.margin>
-                        </Label>
-                    </children>
-               <HBox alignment="CENTER" prefHeight="449.0" prefWidth="871.0">
-                  <children>
-                     <VBox maxHeight="350.0" prefHeight="407.0" prefWidth="502.0" styleClass="profil-container">
-                        <children>
-                           <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
-                              <children>
-                                 <Label styleClass="profil-container-header-title" text="Détails du véhicule" />
-                              </children>
-                              <padding>
-                                 <Insets left="20.0" />
-                              </padding>
-                           </VBox>
-                           <VBox prefHeight="289.0" prefWidth="500.0" spacing="20.0">
-                              <children>
-                                 <HBox maxWidth="438.0" prefHeight="38.0" prefWidth="438.0">
+                  <HBox>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                     <children>
+                              <Label fx:id="title" prefHeight="35.0" prefWidth="655.0" styleClass="main-title" text="Modification de la tournée n°X" />
+                        <Pane prefHeight="35.0" prefWidth="192.0">
+                           <children>
+                              <VBox fx:id="errorPopup" layoutX="-175.0" layoutY="-43.0" maxHeight="139.0" minWidth="400.0" prefHeight="139.0" prefWidth="400.0" styleClass="errorPopup" visible="false">
+                                 <HBox.margin>
+                                    <Insets left="325.0" />
+                                 </HBox.margin>
+                                 <children>
+                                    <VBox maxHeight="4.0" minHeight="4.0" prefHeight="4.0" prefWidth="339.0" styleClass="errorPopup-indicator" />
+                                    <HBox prefHeight="120.0" prefWidth="400.0" styleClass="errorPopup-container">
+                                       <children>
+                                          <Label prefHeight="17.0" prefWidth="33.0">
+                                             <padding>
+                                                <Insets left="10.0" top="17.0" />
+                                             </padding>
+                                             <graphic>
+                                                <Region styleClass="errorPopup-img" />
+                                             </graphic>
+                                          </Label>
+                                          <VBox prefHeight="110.0" prefWidth="312.0">
+                                             <children>
+                                                <Label styleClass="errorPopup-title" text="Erreur !" />
+                                                <Label fx:id="popupMessage" styleClass="errorPopup-subtitle" />
+                                             </children>
+                                             <padding>
+                                                <Insets left="15.0" top="15.0" />
+                                             </padding>
+                                          </VBox>
+                                          <VBox alignment="TOP_RIGHT" prefHeight="120.0" prefWidth="57.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" onMouseClicked="#onClosePopup" prefHeight="28.0" prefWidth="28.0" styleClass="successPopup-close">
+                                                   <graphic>
+                                                      <Region styleClass="successPopup-close-img" />
+                                                   </graphic>
+                                                   <VBox.margin>
+                                                      <Insets right="15.0" top="10.0" />
+                                                   </VBox.margin>
+                                                </Button>
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </Pane>
+                     </children>
+                  </HBox>
+                        <HBox alignment="CENTER" prefHeight="513.0" prefWidth="871.0" spacing="30.0">
+                            <children>
+                                <VBox maxHeight="350.0" prefHeight="407.0" prefWidth="400.0" styleClass="profil-container">
                                     <children>
-                                       <VBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="240.0">
-                                          <children>
-                                             <Label text="Plaque d'immatriculation" />
-                                          </children>
-                                          <padding>
-                                             <Insets left="10.0" />
-                                          </padding>
-                                       </VBox>
-                                       <VBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="198.0">
-                                          <children>
-                                                    <Label fx:id="vehicule" />
-                                          </children>
-                                       </VBox>
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title" text="Détails du véhicule" />
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0" />
+                                            </padding>
+                                        </VBox>
+                                        <VBox prefHeight="289.0" prefWidth="500.0" spacing="20.0">
+                                            <children>
+                                                <HBox maxWidth="438.0" prefHeight="38.0" prefWidth="438.0">
+                                                    <children>
+                                                        <VBox alignment="CENTER_LEFT" prefHeight="38.0" prefWidth="240.0">
+                                                            <children>
+                                                                <Label text="Plaque d'immatriculation" />
+                                                            </children>
+                                                            <padding>
+                                                                <Insets left="10.0" />
+                                                            </padding>
+                                                        </VBox>
+                                                        <VBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="198.0">
+                                                            <children>
+                                                                <Label fx:id="vehicule" />
+                                                            </children>
+                                                        </VBox>
+                                                    </children>
+                                                </HBox>
+                                                <TextField fx:id="poids" maxWidth="250.0" minHeight="40.0" minWidth="250.0" promptText="Poids maximum supporté" />
+                                            </children>
+                                            <VBox.margin>
+                                                <Insets />
+                                            </VBox.margin>
+                                            <padding>
+                                                <Insets left="30.0" top="60.0" />
+                                            </padding>
+                                        </VBox>
                                     </children>
-                                 </HBox>
-                                        <TextField fx:id="poids" maxWidth="250.0" minHeight="40.0" minWidth="250.0" promptText="Poids maximum supporté" />
-                              </children>
-                              <VBox.margin>
-                                 <Insets />
-                              </VBox.margin>
-                              <padding>
-                                 <Insets left="30.0" top="60.0" />
-                              </padding>
-                           </VBox>
-                        </children>
-                     </VBox>
-                  </children>
-               </HBox>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <Button id="vehiculeButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier le véhicule" />
-                        </children>
-                    </HBox>
+                                </VBox>
+                                <VBox maxHeight="200.0" prefHeight="256.0" prefWidth="400.0" styleClass="profil-container">
+                                    <children>
+                                        <VBox alignment="CENTER_LEFT" maxHeight="56.0" prefHeight="200.0" prefWidth="100.0" styleClass="profil-container-header">
+                                            <children>
+                                                <Label styleClass="profil-container-header-title" text="Entreprise" />
+                                            </children>
+                                            <padding>
+                                                <Insets left="20.0" />
+                                            </padding>
+                                        </VBox>
+                                        <VBox prefHeight="154.0" prefWidth="250.0">
+                                            <children>
+                                                <ComboBox fx:id="entreprisesCb" minHeight="40.0" minWidth="250.0" prefWidth="150.0" promptText="Entreprise propriétaire" />
+                                            </children>
+                                            <padding>
+                                                <Insets left="30.0" top="40.0" />
+                                            </padding>
+                                        </VBox>
+                                    </children>
+                                </VBox>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button id="vehiculeButton" minHeight="40.0" minWidth="192.0" mnemonicParsing="false" onMouseClicked="#onEditButton" styleClass="addCommandeButton" text="Modifier le véhicule" />
+                            </children>
+                        </HBox>
+                    </children>
                     <padding>
                         <Insets bottom="30.0" left="40.0" right="40.0" top="20.0" />
                     </padding>
