--- a/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Vehicules.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Admin/Vehicules.fxml
@@ -50,9 +50,9 @@
                                                 </Label>
                                                 <VBox prefHeight="110.0" prefWidth="312.0">
                                                     <children>
-                                                        <Label styleClass="successPopup-title"
+                                                        <Label fx:id="title" styleClass="successPopup-title"
                                                                text="Véhicule ajoutée !"/>
-                                                        <Label styleClass="successPopup-subtitle"
+                                                        <Label fx:id="message" styleClass="successPopup-subtitle"
                                                                text="Le véhicule immatriculé : X a bien été ajoutée !"/>
                                                     </children>
                                                     <padding>
